Grundläggande style och layout på första sidan. Har en grundläggande meny med styling för hover. Footer style fixad. Börjat på huvudinnehållet.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
     <head>
         <meta charset="utf-8">
         <title>Garnkurser med Gunnel</title>
         <link rel="icon" href="img/favicon.ico">
         <link rel="stylesheet" href="style.css">
     </head>
+    
     <body>
-<header>
-    <h1>Garnkurser med Gunnel</h1>
-</header>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates deleniti veniam neque aliquid! Natus, nihil obcaecati exercitationem aspernatur adipisci beatae tempore rerum. Eaque ut deleniti alias illum, temporibus delectus consectetur.
-        </p>
+        <header>
+            <h1 class="heading">Garnkurser med Gunnel</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Start</a></li>
+                    <li><a href="course-info.html">Kursinformation</a></li>
+                    <li><a href="sign-up.html">Anmälan</a></li>
+                </ul>
+            </nav> 
+        </header>
+
+    <main>
+        <div class="content-container">
+            <table>
+                <tr class="content">
+                    <td>image</td>
+                    <td>välkomsttext</td>
+                </tr>
+            </table>            
+        </div>
+
+    </main>  
+
+    <footer>
+        <p class="heading">&copy; Grandma Productions AB 2024. Alla rätter förbehållna.</p>
+    </footer>
+
     </body>
 </html>
