HTML för kursinfo och kursanmälan i stort sett klart. Lagt till en table för ett par recensioner för första sidan. Kanske tar bort dem till förmån av tid. Lagt till media query för skärmar större än 550px.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Garnkurser med Gunnel</title>
         <link rel="icon" href="img/favicon.ico">
         <link rel="stylesheet" href="style.css">
@@ -20,14 +21,27 @@
         </header>
 
     <main>
-        <div class="content-container">
+        <div class="container">
             <table>
-                <tr class="content">
+                <tr class="hero">
                     <td>image</td>
                     <td>välkomsttext</td>
                 </tr>
             </table>            
         </div>
+
+        <table>
+            <tr>
+                <td class="review">
+                    <p>Review 1</p>
+                </td>
+                <td class="review">
+                    <p>Review 2</p>
+                </td>
+            </tr>
+        </table>
+
+
 
     </main>  
 
