--- a/index.html
+++ b/index.html
@@ -22,10 +22,19 @@
 
     <main>
         <div class="container">
+
+            <div class="hero">
+                
+            </div>
             <table>
                 <tr class="hero">
-                    <td>image</td>
-                    <td>välkomsttext</td>
+                    <td>
+                        <img src="img/profil.JPG" alt="Äldre dam" height="200px"></td>
+                    <td>
+                        <h2>Välkommen till hantverkets underbara värld</h2>
+                        <p>Gunnel är en erkänd mästare på alla olika typer av handarbete, och har över 40 års erfarenhet av undervisning. Har du någonsin undrat hur granfrun lyckas producera raggsockor till alla barnbarnen varje jul, undra inte längre! Gunnels tekniker används av många i stickeribranchen och säkerställer att du kan producera mer, och viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört vid ett par stickor förr, om du är gammal eller ung, alla kan lära sig Gunnels tekniker!
+                        </p>
+                    </td>
                 </tr>
             </table>            
         </div>
@@ -33,15 +42,17 @@
         <table>
             <tr>
                 <td class="review">
-                    <p>Review 1</p>
+                    <h3>Underbar lärare!</h3>
+                    <p>Jag kände mig alltid så otillräcklig när det kom till flerfärgsstickning, men Gunnel hjälpte mig genom hela processen. Numera är det mig alla i stickgruppen frågar om råd när det gäller att sticka lusekoftor!</p>
+                    <p>⭐⭐⭐⭐⭐/5</p>
                 </td>
                 <td class="review">
-                    <p>Review 2</p>
+                    <h3>Bra för nybörjare</h3>
+                    <p>Jag var orolig att det skulle vara en "nybörjarkurs" där alla redan kunde allt, men så var det minsann inte! Vi gick genom grunderna mycket noggrannt och plötsligt så föll allt på plats! Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag fler sockor än jag kan ge bort!</p>
+                    <p>⭐⭐⭐⭐⭐/5</p>
                 </td>
             </tr>
         </table>
-
-
 
     </main>  
 
