Gjort om info-tabell på startsidan till grid som är lite responsiv. Fixade footer som täckte över innehåll om det var för mycket på sidan.

--- a/index.html
+++ b/index.html
@@ -21,25 +21,19 @@
         </header>
 
     <main>
-        <div class="container">
+        <div class="hero-container">
 
-            <div class="hero">
-                
+            <div class="portrait hero">
+                <img src="img/profil.JPG" alt="Äldre dam" width="275px">
             </div>
-            <table>
-                <tr class="hero">
-                    <td>
-                        <img src="img/profil.JPG" alt="Äldre dam" height="200px"></td>
-                    <td>
-                        <h2>Välkommen till hantverkets underbara värld</h2>
-                        <p>Gunnel är en erkänd mästare på alla olika typer av handarbete, och har över 40 års erfarenhet av undervisning. Har du någonsin undrat hur granfrun lyckas producera raggsockor till alla barnbarnen varje jul, undra inte längre! Gunnels tekniker används av många i stickeribranchen och säkerställer att du kan producera mer, och viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört vid ett par stickor förr, om du är gammal eller ung, alla kan lära sig Gunnels tekniker!
-                        </p>
-                    </td>
-                </tr>
-            </table>            
+            <div class="hero">                        
+                <h2>Välkommen till hantverkets underbara värld</h2>
+                <p>Gunnel är en erkänd mästare på alla olika typer av handarbete, och har över 40 års erfarenhet av undervisning. Har du någonsin undrat hur granfrun lyckas producera raggsockor till alla barnbarnen varje jul, undra inte längre! Gunnels tekniker används av många i stickeribranchen och säkerställer att du kan producera mer, och viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört vid ett par stickor förr, om du är gammal eller ung, alla kan lära sig Gunnels tekniker!
+                </p>
+            </div>        
         </div>
 
-        <table>
+        <table class="scrollable">
             <tr>
                 <td class="review">
                     <h3>Underbar lärare!</h3>
