Justerat grid på index. Tagit bort bortkommentead kod. Bytt ut bild på person till garn.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <main>
         <div class="hero-container">
 
-            <div class="portrait hero">
-                <img src="img/profil.JPG" alt="Äldre dam" width="275px">
-            </div>
-            <div class="hero">                        
+            <div class="hero">
                 <h2>Välkommen till hantverkets underbara värld</h2>
                 <p>Gunnel är en erkänd mästare på alla olika typer av handarbete, och har över 40 års erfarenhet av undervisning. Har du någonsin undrat hur granfrun lyckas producera raggsockor till alla barnbarnen varje jul, undra inte längre! Gunnels tekniker används av många i stickeribranchen och säkerställer att du kan producera mer, och viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört vid ett par stickor förr, om du är gammal eller ung, alla kan lära sig Gunnels tekniker!
                 </p>
+
+            </div>
+            <div class="portrait hero">                        
+                <img src="img/yarn.jpg" alt="En cirkel med garnnystan" width="275px">
             </div>        
         </div>
 
