Fixat att recensionerna är div'ar i en grid också. Tog bort ytterligare en onödig klass (scrollable). Försöker lista ut vad som strular med h1-rubriken mellan olika sidor.

--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
             </div>        
         </div>
 
-        <table class="scrollable">
-            <tr>
-                <td class="review">
-                    <h3>Underbar lärare!</h3>
+
+        <div class="review-container">
+            <div class="review">
+                <h3>Underbar lärare!</h3>
                     <p>Jag kände mig alltid så otillräcklig när det kom till flerfärgsstickning, men Gunnel hjälpte mig genom hela processen. Numera är det mig alla i stickgruppen frågar om råd när det gäller att sticka lusekoftor!</p>
                     <p>⭐⭐⭐⭐⭐/5</p>
-                </td>
+
+            </div>
+            <div class="review">
                 <td class="review">
                     <h3>Bra för nybörjare</h3>
                     <p>Jag var orolig att det skulle vara en "nybörjarkurs" där alla redan kunde allt, men så var det minsann inte! Vi gick genom grunderna mycket noggrannt och plötsligt så föll allt på plats! Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag fler sockor än jag kan ge bort!</p>
                     <p>⭐⭐⭐⭐⭐/5</p>
-                </td>
-            </tr>
-        </table>
-
+            </div>
+        </div>
     </main>  
 
     <footer>
