Flyttat om i style sheet och fixat bättre indentering. Uppdaterat projectlog

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <body>
         <header>
-            <h1 class="heading">Garnkurser med Gunnel</h1>
+            <h1>Garnkurser med Gunnel</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Start</a></li>
@@ -21,6 +21,7 @@
         </header>
 
     <main>
+        <div class="container">
         <div class="hero-container">
 
             <div class="hero">
@@ -49,6 +50,8 @@
                     <p>⭐⭐⭐⭐⭐/5</p>
             </div>
         </div>
+
+    </div>
     </main>  
 
     <footer>
