Lagt till ett google font till huvudrubrik. Anpassat rubrikstorlek något. La till en ytterligare större media query för ännu större rubriker.

--- a/index.html
+++ b/index.html
@@ -1,62 +1,88 @@
 <!DOCTYPE html>
 <html lang="sv">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Garnkurser med Gunnel</title>
-        <link rel="icon" href="img/favicon.ico">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    
-    <body>
-        <header>
-            <h1>Garnkurser med Gunnel</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Start</a></li>
-                    <li><a href="course-info.html">Kursinformation</a></li>
-                    <li><a href="sign-up.html">Anmälan</a></li>
-                </ul>
-            </nav> 
-        </header>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Garnkurser med Gunnel</title>
+    <link rel="icon" href="img/favicon.ico" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <header>
+      <h1 class="twinkle-star-regular">Garnkurser med Gunnel</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Start</a></li>
+          <li><a href="course-info.html">Kursinformation</a></li>
+          <li><a href="sign-up.html">Anmälan</a></li>
+        </ul>
+      </nav>
+    </header>
 
     <main>
-        <div class="container">
+      <div class="container">
         <div class="hero-container">
-
-            <div class="hero">
-                <h2>Välkommen till hantverkets underbara värld</h2>
-                <p>Gunnel är en erkänd mästare på alla olika typer av handarbete, och har över 40 års erfarenhet av undervisning. Har du någonsin undrat hur granfrun lyckas producera raggsockor till alla barnbarnen varje jul, undra inte längre! Gunnels tekniker används av många i stickeribranchen och säkerställer att du kan producera mer, och viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört vid ett par stickor förr, om du är gammal eller ung, alla kan lära sig Gunnels tekniker!
-                </p>
-
-            </div>
-            <div class="portrait hero">                        
-                <img src="img/yarn.jpg" alt="En cirkel med garnnystan" width="275px">
-            </div>        
+          <div class="hero">
+            <h2>Välkommen till handarbetets underbara värld</h2>
+            <p>
+              Gunnel är en erkänd mästare på alla olika typer av handarbete, och
+              har över 40 års erfarenhet av undervisning. Har du någonsin undrat
+              hur granfrun lyckas producera raggsockor till alla barnbarnen
+              varje jul, undra inte längre! Gunnels tekniker används av många i
+              stickeribranchen och säkerställer att du kan producera mer, och
+              viktigast, hela livet ut. Det spelar ingen roll om du aldrig rört
+              vid ett par stickor förr, om du är gammal eller ung, alla kan lära
+              sig Gunnels tekniker!
+            </p>
+          </div>
+          <div class="portrait hero">
+            <img
+              src="img/yarn.jpg"
+              alt="En cirkel med garnnystan"
+              width="275px"
+            />
+          </div>
         </div>
-
 
         <div class="review-container">
-            <div class="review">
-                <h3>Underbar lärare!</h3>
-                    <p>Jag kände mig alltid så otillräcklig när det kom till flerfärgsstickning, men Gunnel hjälpte mig genom hela processen. Numera är det mig alla i stickgruppen frågar om råd när det gäller att sticka lusekoftor!</p>
-                    <p>⭐⭐⭐⭐⭐/5</p>
-
-            </div>
-            <div class="review">
-                <td class="review">
-                    <h3>Bra för nybörjare</h3>
-                    <p>Jag var orolig att det skulle vara en "nybörjarkurs" där alla redan kunde allt, men så var det minsann inte! Vi gick genom grunderna mycket noggrannt och plötsligt så föll allt på plats! Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag fler sockor än jag kan ge bort!</p>
-                    <p>⭐⭐⭐⭐⭐/5</p>
-            </div>
+          <div class="review">
+            <h3>Underbar lärare!</h3>
+            <p>
+              Jag kände mig alltid så otillräcklig när det kom till
+              flerfärgsstickning, men Gunnel hjälpte mig genom hela processen.
+              Numera är det mig alla i stickgruppen frågar om råd när det gäller
+              att sticka lusekoftor!
+            </p>
+            <p>⭐⭐⭐⭐⭐/5</p>
+          </div>
+          <div class="review">
+            <td class="review">
+              <h3>Bra för nybörjare</h3>
+              <p>
+                Jag var orolig att det skulle vara en "nybörjarkurs" där alla
+                redan kunde allt, men så var det minsann inte! Vi gick genom
+                grunderna mycket noggrannt och plötsligt så föll allt på plats!
+                Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag
+                fler sockor än jag kan ge bort!
+              </p>
+              <p>⭐⭐⭐⭐⭐/5</p>
+            </td>
+          </div>
         </div>
-
-    </div>
-    </main>  
+      </div>
+    </main>
 
     <footer>
-        <p class="heading">&copy; Grandma Productions AB 2024. Alla rätter förbehållna.</p>
+      <p class="heading">
+        &copy; Grandma Productions AB 2024. Alla rätter förbehållna.
+      </p>
     </footer>
-
-    </body>
+  </body>
 </html>
