--- a/course-info.html
+++ b/course-info.html
@@ -6,11 +6,17 @@
     <title>Garnkurser med Gunnel</title>
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
     <header>
-      <h1>Garnkurser med Gunnel</h1>
+      <h1 class="twinkle-star-regular">Garnkurser med Gunnel</h1>
       <nav>
         <ul>
           <li><a href="index.html">Start</a></li>
