--- a/index.html
+++ b/index.html
@@ -43,11 +43,7 @@
             </p>
           </div>
           <div class="portrait hero">
-            <img
-              src="img/yarn.jpg"
-              alt="En cirkel med garnnystan"
-              width="275px"
-            />
+            <img id="bild" src="img/yarn.jpg" alt="En cirkel med garnnystan" />
           </div>
         </div>
 
@@ -63,17 +59,15 @@
             <p>⭐⭐⭐⭐⭐/5</p>
           </div>
           <div class="review">
-            <td class="review">
-              <h3>Bra för nybörjare</h3>
-              <p>
-                Jag var orolig att det skulle vara en "nybörjarkurs" där alla
-                redan kunde allt, men så var det minsann inte! Vi gick genom
-                grunderna mycket noggrannt och plötsligt så föll allt på plats!
-                Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag
-                fler sockor än jag kan ge bort!
-              </p>
-              <p>⭐⭐⭐⭐⭐/5</p>
-            </td>
+            <h3>Bra för nybörjare</h3>
+            <p>
+              Jag var orolig att det skulle vara en "nybörjarkurs" där alla
+              redan kunde allt, men så var det minsann inte! Vi gick genom
+              grunderna mycket noggrannt och plötsligt så föll allt på plats!
+              Jag har inte kunnat sluta sticka sen jag kom hem, och nu har jag
+              fler sockor än jag kan ge bort!
+            </p>
+            <p>⭐⭐⭐⭐⭐/5</p>
           </div>
         </div>
       </div>
