La till kravtext för telefonnummer i kursanmälan. Skrivit klart log.

--- a/sign-up.html
+++ b/sign-up.html
@@ -41,8 +41,7 @@
           </div>
 
           <div class="signup-form">
-            <!-- Pattern i telefonnummer kräver siffror och minst 5 tecken -->
-            <label for="phonenr">Telefonnummer</label><br />
+            <label for="phonenr">Telefonnummer, enbart siffor, minst 5 tecken</label><br />
             <input
               type="tel"
               id="phonenr"
